--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 
     <script>
       var chatbox = document.getElementById('fb-customer-chat');
-      chatbox.setAttribute("page_id", "683188475389551");
-      chatbox.setAttribute("attribution", "page_inbox");
+      chatbox.setAttribute("page_id", "113158963859806");
+      chatbox.setAttribute("attribution", "biz_inbox");
       window.fbAsyncInit = function() {
         FB.init({
           xfbml            : true,
